(Issue #3985) Fix uneven width on jeditable list items

--- a/shared/oae/css/oae.base.css
+++ b/shared/oae/css/oae.base.css
@@ -264,6 +264,7 @@ input.search-query {
     margin-top: -4px;
     outline: none;
     padding: 0;
+    width: 100%;
 }
 
 .modal .jeditable-field form input::-ms-clear {
